Fix handle misalignement

--- a/src/edition/CustomNodes/Handle.module.css
+++ b/src/edition/CustomNodes/Handle.module.css
@@ -5,18 +5,9 @@
   background: #ddd;
 }
 
-.handle[data-handlepos='left'] {
-  left: calc(var(--handle--width) / -2);
-}
-
-.handle[data-handlepos='right'] {
-  left: calc(100% - var(--handle--width) / 2);
-}
-
 .input {
   composes: handle;
   border: 2px solid var(--input-handle--borderColor);
-  left: calc(var(--handle--width) / -2);
 }
 
 .input[data-handlepos='top'],
@@ -27,7 +18,6 @@
 .output {
   composes: handle;
   border: 2px solid var(--output-handle--borderColor);
-  right: calc(var(--handle--width) / -2);
 }
 
 .output[data-handlepos='top'],
